<resources>
    <string name="app_name">Polaris</string>
    <string name="login">登 入</string>
    <string name="register">注 册</string>
    <string name="input_pwd">请填写密码</string>
    <string name="pwd">密码</string>
    <string name="_86">+86 </string>
    <string name="phone_num">手机号</string>
    <string name="input_phone_num">请填写手机号码</string>
    <string name="openDrawerDesc">打开选项卡</string>
    <string name="closeDrawerDesc">关闭选项卡</string>
    <string name="home_page">首页</string>
    <string name="night_mode">夜间模式</string>
    <string name="system_config">系统设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
