<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:textColor="@color/blue_band_dark"
            android:text="@string/phone_num"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:text="@string/_86"
            android:hint="@string/input_phone_num"
            android:background="@null"
            android:singleLine="true"
            android:id="@+id/et_username"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:background="@color/blue_band_dark3"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:textColor="@color/blue_band_dark"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/pwd"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            android:hint="@string/input_pwd"
            android:background="@null"
            android:inputType="textPassword"
            android:singleLine="true"
            android:id="@+id/et_password"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:background="@color/blue_band_dark3"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <Button
        android:layout_marginTop="@dimen/button_margin"
        android:background="@drawable/dark_bg_light_ripple"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_font_size"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:layout_marginTop="@dimen/button_margin"
        android:background="@drawable/band_stroke_bg"
        android:text="@string/register"
        android:textSize="@dimen/login_font_size"
        android:textColor="@color/blue_band_dark"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>
